Added 2 algorithms to calcuate possible movie combinations, currently both fail for any number of movies above 16, further work to optimise them is to be done, possibly by eliminating movie clashes as combinations are calculated

--- a/FilmFestivalOrganiser/FilmFestivalOrganiser.csproj
+++ b/FilmFestivalOrganiser/FilmFestivalOrganiser.csproj
@@ -44,8 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="FilmFestivalOrganiser.cs" />
+    <Compile Include="Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
