Add cross origin settings to web.config. Changed request url

--- a/FilmFestivalOrganiserWebService/Web.config
+++ b/FilmFestivalOrganiserWebService/Web.config
@@ -19,10 +19,17 @@
     </httpHandlers>
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
+  
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </handlers>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
+ 
 </configuration>
