--- a/FilmFestivalOrganiser/FilmFestivalOrganiser.csproj
+++ b/FilmFestivalOrganiser/FilmFestivalOrganiser.csproj
@@ -51,11 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DayTimeFilter.cs" />
     <Compile Include="Movie.cs" />
     <Compile Include="MovieCombinationAndValidation.cs" />
     <Compile Include="AllMoviesWithAllTimesGenerator.cs" />
+    <Compile Include="MovieDay.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GetMoviesFromWatchlistUrl.cs" />
+    <Compile Include="GetMoviesFromWishlistUrl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
